--- a/AWS_cfn_mysql_small.yaml
+++ b/AWS_cfn_mysql_small.yaml
@@ -73,7 +73,7 @@ Resources:
     Properties: 
       Description: "CloudFormation Sample Aurora Cluster Parameter Group"
       # Family: aurora5.6 # if you need 5.6 and adjust Family in parameter group.
-      Family: aurora-mysql5.7
+      Family: aurora-mysql8.0 #changed from aurora-mysql5.7 to aurora-mysql8.0
       Parameters: 
         time_zone: US/Eastern
         ### Add a role to export to s3
@@ -86,7 +86,7 @@ Resources:
       DBClusterIdentifier: 
         Ref: RDSCluster
       # AllocatedStorage: '20'
-      DBInstanceClass: db.t2.small
+      DBInstanceClass: db.r5.large #changed from db.t2.small to db.r5.large
       # Engine: aurora
       Engine: aurora-mysql
       PubliclyAccessible: "true"
@@ -96,7 +96,7 @@ Resources:
     Properties:
       Description: CloudFormation Sample Aurora Parameter Group
       # Family: aurora5.6
-      Family: aurora-mysql5.7
+      Family: aurora-mysql8.0 #changed
       Parameters:
         sql_mode: IGNORE_SPACE
         max_allowed_packet: 1024
